- Attempting to fix broken logo link when pushed to github
To Do:
- Finish navbar
  - Make links work
  - Add navbar spy
  - Add new logo
  - Fix none stickyness of navbar
- Finish About Me
  - Fix image
  - Add small summary
- Finish Project Examples
  - Add image
  - Small description of project
  - Link to GitHub repos
- Finish Contact Me
  - Add form for quick email
  - Add bar with links to social media
    - Linkedin
    - Facebook
    - Gmail
    - Etc.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -33,7 +33,7 @@
             
             <!-- Navigation bar logo  -->
             <nav class="navbar navbar-expand-sm  navbar-dark sticky-top" style="background: #18121E;">
-                <a class="navbar-brand" href="#featured"><img src="img/RSLogo.jpg" alt="Logo" style="height: 50px; width:60px;"></a>
+                <a class="navbar-brand" href="#featured"><img src="img/RSLogo.JPG" alt="Logo" style="height: 50px; width:60px;"></a>
                 <ul class="navbar-nav navbar-right">
                     <li class="nav-item"><a class="nav-link" href="#AboutMe">About Me</a></li>
                     <li class="nav-item"><a class="nav-link" href="#ProjectExamples">Project Examples</a></li>
