- Fixed github broken image links - Attempting to fix responsiveness on small phones
To Do:
- Finish navbar
  - Make links work
  - Add navbar spy
  - Add new logo
  - Fix none stickyness of navbar
- Finish About Me
  - Fix image
  - Add small summary
- Finish Project Examples
  - Add image
  - Small description of project
  - Link to GitHub repos
- Finish Contact Me
  - Add form for quick email
  - Add bar with links to social media
    - Linkedin
    - Facebook
    - Gmail
    - Etc.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -19,14 +19,14 @@
     </head>
     
     <body>
-        <div class="container.fluid">
+        <div class="container-fluid">
         <header>
             
             <!-- Overlay imsge -->
             <div class="row">
                 <div class="col-xs-12">
                     <div>
-                        <img src="img/England - Overlay.jpg" class="img-fluid " alt="Overlay image of England" style="width:100%; height:auto;">
+                        <img src="img/England - Overlay.jpg" class="img-fluid " alt="Overlay image of England" style="width:100%;">
                     </div>
                 </div> <!-- col -->
             </div> <!-- row -->
