Recent Changes: - Changed navbar home button - Changed banner image, added caption and logo
To Do:
- Banner
  - Add logo
  - Add phrase
- Finish navbar
  - Add new home button - change
- Finish About Me
  - Add small summary
- Finish Project Examples
  - Add image
  - Small description of projects
- Finish Contact Me
  - Add form for quick email
  - Add bar with links to social media
    - Linkedin
    - Facebook
    - Gmail
    - Etc.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,21 +31,19 @@
         <header>
             <!-- Overlay image -->
             <div class="page" id="Home">
-                <div>
-                    <img src="img/eng2-2.jpg" class="img-fluid" alt="Overlay image of England" style="opacity: .2; filter: alpha(opacity=20); max-width: 100%; height: auto;">
-                </div>
+                <img src="img/England-Overlay-Logo-Caption.png" class="img-fluid" alt="Overlay image of England" style="opacity: .2; filter: alpha(opacity=20); max-width: 100%; height: auto;">
             </div> <!-- Page Home -->
         </header>
         
         <!-- Navigation bar with logo and toggle for collapsing -->
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top" style="height: 55px;">
-            <a class="navbar-brand" href="#Home"><img id="bulbColor" onmouseover="hover(this);" onmouseout="unhover(this);" src="img/Light Bulb.png" alt="Logo" style="height: 50px; width:60px;"> Home </a>
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top" style="">
+            <a class="navbar-brand" href="#Home"><img id="bulbColor" onmouseover="hover(this);" onmouseout="unhover(this);" src="img/Rocket.png" alt="Logo" style="height: 50px; width:60px;"> Home </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="nav navbar-nav ml-auto">
-                   <li class="nav-item"><a class="nav-link" href="#AboutMe">About Me</a></li>
+                   <li class="nav-item"><a class="nav-link" href="#AboutMe" data-offset="100">About Me</a></li>
                    <li class="nav-item"><a class="nav-link" href="#ProjectExamples">Project Examples</a></li>
                    <li class="nav-item"><a class="nav-link" href="#ContactMe">Contact Me</a></li>
                </ul>
