Recent Changes: - Took off opacity settings for banner image
To Do:
- Banner
  - Done
- Finish navbar
  - Add new home button - change
- Finish About Me
  - Add small summary
- Finish Project Examples
  - Add image
  - Small description of projects
- Finish Contact Me
  - Add form for quick email
  - Add bar with links to social media
    - Linkedin
    - Facebook
    - Gmail
    - Etc.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,7 +31,7 @@
         <header>
             <!-- Overlay image -->
             <div class="page" id="Home">
-                <img src="img/England-Overlay-Logo-Caption.png" class="img-fluid" alt="Overlay image of England" style="opacity: .2; filter: alpha(opacity=20); max-width: 100%; height: auto;">
+                <img src="img/England-Overlay-Logo-Caption.png" class="img-fluid" alt="Overlay image of England" style="max-width: 100%; height: auto;">
             </div> <!-- Page Home -->
         </header>
         
