Recent Changes: - Worked on grid system on about me
To Do:
- Banner
  - Done
- Finish navbar
  - Add new home button - change
- Finish About Me
  - Add small summary
- Finish Project Examples
  - Add image
  - Small description of projects
- Finish Contact Me
  - Add form for quick email
  - Add bar with links to social media
    - Linkedin
    - Facebook
    - Gmail
    - Etc.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -50,19 +50,26 @@
             </div>  
         </nav>  
             
-        <div class="page" id="AboutMe">
-            <div class="media" style="background: #C5C6C7;">
-                <img class="d-flex align-self-center mr-3 rounded-circle" src="img/Out to Eat Iowa City - About Me.jpg" alt="Out to eat in Iowa City." width="250" height="250">
-                <div class="media-body">
-                    <h5 class="mt-0 font-weight-bold">Center-aligned media</h5>
-                    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra
-                            turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-                    <p class="mb-0">Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes,
-                            nascetur ridiculus mus.</p>
-                </div> <!-- page -->
-            </div> <!-- media -->
-        </div> <!-- Page About Me -->
-
+        
+        <nav class="page" id="AboutMe">
+            <nav class="container-fluid" style="background-color: #C5C6C7;">
+                <nav class="row" style="padding-top:5%; padding-bottom:3%;">
+                    <nav class="col-lg-1 col-md-4 col-sm-3 col-xs-3"></nav>
+                    <nav class="col-lg-2 col-md-4 col-sm-6 col-xs-6">
+                        <img style="margin-left: 5%; margin-left: 5%;" class="rounded-circle" src="img/Out to Eat Iowa City - About Me.jpg" alt="Out to eat in Iowa City." width="250" height="250">
+                    </nav>
+                    <nav class="col-lg-1 col-md-4 col-sm-3 col-xs-3"></nav>
+                    <nav class="col-lg-8 col-md-12">
+                        <h2 style="text-align: center; padding-top:2%; color: #0B0C10;">About Me</h2>
+                        <p style="text-align: center; padding-top:5%;"> Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. 
+                            Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc 
+                            ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. Donec sed odio dui. 
+                            Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis 
+                            dis parturient montes, nascetur ridiculus mus.</p>
+                    </nav>
+                </nav>
+            </nav>
+        </nav>
 
         <div class="page" id="ProjectExamples">
             <h2 style="height:1500px;">Project Examples</h2>
