Recent Changes: - Minor changes
To Do:
- Banner
  - Done
- Finish navbar
  - Done
- Finish About Me
  - Add small summary
- Finish Project Examples
  - Add image
  - Small description of projects
- Finish Contact Me
  - Add bar with links to social media
    - Linkedin
    - Facebook
    - Gmail
    - Etc.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -50,7 +50,7 @@
                 <ul class="nav navbar-nav ml-auto" style="color: #C5C6C7;">
                    <li class="nav-item"><a class="nav-link" href="#AboutMe" data-offset="100">About Me</a></li>
                    <li class="nav-item"><a class="nav-link" href="#ProjectExamples" data-offset="100">Project Examples</a></li>
-                   <li class="nav-item"><a class="nav-link" href="#ContactMe" data-offset="100">Contact Me</a></li>
+                   <li class="nav-item"><a class="nav-link" href="#contactMe" data-offset="100">Contact Me</a></li>
                </ul>
             </div> <!-- End of collapsible navigation bar --> 
         </nav> <!-- End of Navigation bar -->
@@ -114,7 +114,7 @@
         
         <!-- Beginning of Contact Me section -->
         <section id="contactMe" class="content-section text-center">
-            <h2 style="background-color: #C5C6C7; text-align: center; padding-top: 2%; padding-bottom: 2%; color: #45A29E; width: 100%">Contact Me</h2>
+            <h2 style="background-color: #333333; text-align: center; padding-top: 2%; padding-bottom: 2%; color: #45A29E; width: 100%">Contact Me</h2>
         <div class="contact-section" style="margin-left: 25%;">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
