--- a/public_html/index.html
+++ b/public_html/index.html
@@ -100,7 +100,7 @@
 
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <embed src="img/Reed Stock's Resume.pdf" frameborder="0" width="100%" height="600px">
+                    <embed style="width: 100%; height: 600px;" src="img/Reed Stock's Resume.pdf" frameborder="0">
                 </div>
 
                 <!-- Modal footer -->
