Recent Changes: - Fixed broken image links when pushed to github
To Do:
- Banner
  - Done
- Finish navbar
  - Done
- Finish About Me
  - Add small summary
- Finish Project Examples
  - Add image
  - Small description of projects
- Finish Contact Me
  - Add bar with links to social media
    - Linkedin
    - Facebook
    - Gmail
    - Etc.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -134,7 +134,7 @@
                     <div class="carousel-item"> <img style="width: 65%; height: auto; margin-left: 17%;" src="img/Weather Web App Montage - Example Projects.png" alt="Image of weather web application."> </div>
                     <div class="carousel-item"> <img style="width: 65%; height: auto; margin-left: 17%;" src="img/Weather Web App Montage - Example Projects.png" alt="Image of flights web application"> </div>
                     <div class="carousel-item"> <img style="width: 65%; height: auto; margin-left: 17%;" src="img/Weather Web App Montage - Example Projects.png" alt="Image of senior design project."> </div>
-                    <div class="carousel-item"> <img style="width: 65%; height: auto; margin-left: 17%; margin-top: 11%; margin-bottom:15%;" src="img/Work in Progress.png" alt="Image of current project - work in progress"> </div>
+                    <div class="carousel-item"> <img style="width: 65%; height: auto; margin-left: 17%; margin-top: 11%; margin-bottom:15%;" src="img/Work In Progress.png" alt="Image of current project - work in progress"> </div>
               </div> <!-- End of carousel-inner -->
 
               <!-- Left and right controls -->
