Recent Changes: - Work in progress caption - Formatting image in about me
To Do:
- Banner
  - Done
- Finish navbar
  - Done
- Finish About Me
  - Fix formatting of image on resize
- Finish Project Examples
  - Add image
  - Small description of projects
- Finish Contact Me
  - Add bar with links to social media
    - Linkedin
    - Facebook
    - Gmail
    - Etc.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -61,7 +61,7 @@
                 <div class="row" style="padding-top:5%; padding-bottom:3%;">
                     <div class="col-lg-1 col-md-4 col-sm-3 col-xs-1"></div>
                     <div class="col-lg-2 col-md-4 col-sm-6 col-xs-10">
-                        <img style="margin-left: 5%; margin-left: 5%;" class="rounded-circle" src="img/about me/Out to Eat Iowa City.jpg" alt="Out to eat in Iowa City." width="250" height="250">
+                        <img style="margin-top: 30%; margin-bottom: 10%; margin-right: 5%; margin-left: 5%;" class="rounded-circle" src="img/about me/Out to Eat Iowa City.jpg" alt="Out to eat in Iowa City." width="250" height="250">
                     </div>
                     <div class="col-lg-1 col-md-4 col-sm-3 col-xs-1"></div>
                     <div class="col-lg-8 col-md-12">
@@ -75,8 +75,8 @@
                         </p>
                         <p style="text-align: center;">
                         From my experiences at the University of Iowa I have had the privilege of working with a variety
-                        of different technologies. Ruby on Rails with RSpec and Cucumber tests, Java, C, C++, Python, 
-                        CSS, HTML, MySQL and more! I've learned to host websites using Heroku, how to communicate 
+                        of different technologies.<b> Ruby on Rails with RSpec and Cucumber tests, Java, C, C++, Python, 
+                        CSS, HTML, MySQL </b> and more! I've learned to host websites using Heroku, how to communicate 
                         to Amazons Firebase cloud based database and I've learned about testing software using continuous 
                         integration testing. 
                         </p>
@@ -87,7 +87,7 @@
                         </p>
                         <P style="text-align: center;">
                         Feel free to use check out my resume below or use the contact form to reach out to me!
-                        You can also email me directly at ReedStock1992@Gmail.com or click the LinkedIn button at
+                        You can also email me directly at <b>ReedStock1992@Gmail.com</b> or click the LinkedIn button at
                         the bottom to connect with me.
                         </P>
                     </div> <!-- End of row -->
@@ -139,17 +139,16 @@
                     <li data-target="#projectExamples" data-slide-to="2"></li>
                     <li data-target="#projectExamples" data-slide-to="3"></li>
                     <li data-target="#projectExamples" data-slide-to="4"></li>
-                    <li data-target="#projectExamples" data-slide-to="5"></li>
                 </ul>
 
                 <!-- Images in carousel -->
                 <div class="carousel-inner">
-                    <div class="carousel-item active"> <img style="padding-top: 3%; width: 65%; height: auto; margin-left: 17%;" src="img/project examples/Weather Web App Montage - Project Examples.png" alt="Image of current web page on smart device."> </div>
-                    <div class="carousel-item"> <img style="padding-top: 3%; width: 65%; height: auto; margin-left: 17%;" src="img/project examples/Plane - Project Examples.jpg" alt="Image of weather web application."> </div>
-                    <div class="carousel-item"> <img style="padding-top: 3%; width: 65%; height: auto; margin-left: 17%;" src="img/project examples/Personal Portfolio - Project Examples.JPG" alt="Image of flights web application"> </div>
-                    <div class="carousel-item"> <img style="padding-top: 3%; width: 65%; height: auto; margin-left: 17%;" src="img/project examples/Weather Web App Montage - Project Examples.png" alt="Weather dashboard web application. ."> </div>
-                    <div class="carousel-item"> <img style="padding-top: 3%; width: 65%; height: auto; margin-left: 17%;" src="img/project examples/Sunrise Simulator - Project Examples.jpg" alt="Image of senior design project."> </div>
-                    <div class="carousel-item"> <img style="padding-top: 3%; width: 65%; height: auto; margin-left: 17%;" src="img/project examples/More to Come! - Project Examples.png" alt="Image of current project - work in progress"> </div>
+                    <div class="carousel-item active"> <img style="padding-top: 3%; width: 85%; height: auto; margin-left: 7.5%;" src="img/project examples/Weather Web App Montage - Project Examples.png" alt="Image of current web page on smart device."> </div>
+                    <div class="carousel-caption"><h3>Under construction!</h3><p>Sorry this section is a work in progress still!</p></div>                
+                    <div class="carousel-item"> <img style="padding-top: 3%; width: 85%; height: auto; margin-left: 7.5%;" src="img/project examples/Plane - Project Examples.jpg" alt="Image of weather web application."> </div>
+                    <div class="carousel-item"> <img style="padding-top: 3%; width: 85%; height: auto; margin-left: 7.5%;" src="img/project examples/Personal Portfolio - Project Examples.JPG" alt="Image of flights web application"> </div>
+                    <div class="carousel-item"> <img style="padding-top: 3%; width: 85%; height: auto; margin-left: 7.5%;" src="img/project examples/Sunrise Simulator - Project Examples.jpg" alt="Image of senior design project."> </div>
+                    <div class="carousel-item"> <img style="padding-top: 3%; width: 85%; height: auto; margin-left: 7.5%;" src="img/project examples/More to Come! - Project Examples.png" alt="Image of current project - work in progress"> </div>
                 </div> <!-- End of carousel-inner -->
 
                 <!-- Left and right controls -->
