- Fixed rerouting issue after submitting contact me form.

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
           <input
             type="hidden"
             name="_next"
-            value="https://rstock08.github.io/public_html/index.html"
+            value="https://www.ReedStock.me"
           />
           <div class="form-group">
             <label style="color: #66FCF1;" for="emailInput"></label>
