- Beginning work on landing page after message was sent from Contact Me section. - Deleted image old image.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     style="background-color: #1F2833"
     data-spy="scroll"
     data-target=".navbar"
-    data-offset="100"
-  >
+    data-offset="100">
+    
     <header>
       <!-- Overlay image -->
       <div class="page" id="Home">
