- Added Image - Changed navbar (formatting) - Added Projects.html - Worked on message sent page

--- a/MessageSent.html
+++ b/MessageSent.html
@@ -20,21 +20,22 @@
     <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
 
-  <body
-    style="background-color: #1F2833"
-    data-spy="scroll"
-    data-target=".navbar"
-    data-offset="100"
-  >
+  <body style="background-color: #1F2833">
     <header>
       <!-- Overlay image -->
-      <div class="page" id="Home">
-        <img
-          src="img/England-Overlay-Logo-Caption.png"
-          class="img-fluid"
-          alt="Overlay image of England"
-          style="padding-top: 3%; max-width: 100%; height: auto;"
-        />
+      <div class="jumbotron jumbotron-fluid layer">
+        <div class="container">
+          <h1 class="display-4">Thanks for Reaching Out</h1>
+          <p>I'll be in contact with you as soon as I can!</p>
+          <br />
+          <br />
+          <a
+            class="btn btn-primary btn-lg"
+            href="https://www.ReedStock.me"
+            role="button"
+            >Go Back</a
+          >
+        </div>
       </div>
       <!-- Page Home -->
     </header>
