--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     style="background-color: #1F2833"
     data-spy="scroll"
     data-target=".navbar"
-    data-offset="100">
-    
+    data-offset="100"
+  >
     <header>
       <!-- Overlay image -->
       <div class="page" id="Home">
@@ -88,7 +88,6 @@
           <li class="nav-item">
             <a class="nav-link" href="#AboutMe" data-offset="100">About Me</a>
           </li>
-          </li>
           <li class="nav-item">
             <a class="nav-link" href="#contactMe" data-offset="100"
               >Contact Me</a
@@ -104,61 +103,73 @@
     <section id="AboutMe">
       <div class="container-fluid" style="background-color: #C5C6C7;">
         <div class="row">
-            <div class="col-lg-3 text-center" style="background-color:#C5C6C7; padding-top: 3%">
-                
-                <!-- AboutMe Profile Image -->
-                <img
-                    class="rounded-circle mx-auto d-block"
-                    src="img/about me/ProfilePic.jpg"
-                    alt="Watching the sunset in San Diego."
-                    width="270"
-                    height="300"
-                />
+          <div
+            class="col-lg-3 text-center"
+            style="background-color:#C5C6C7; padding-top: 3%"
+          >
+            <!-- AboutMe Profile Image -->
+            <img
+              class="rounded-circle mx-auto d-block"
+              src="img/about me/ProfilePic.jpg"
+              alt="Watching the sunset in San Diego."
+              width="270"
+              height="300"
+            />
 
-                <!-- Button to Open the Modal -->
-                <button
-                id="modalColors"
-                style="color: #C5C6C7; background-color: #45A29E; margin-top:6%; border: none; margin-bottom: 6%;"
-                type="button"
-                onmouseover="hoverModal(modalColors);"
-                onmouseout="unhoverModal(modalColors);"
-                class="btn btn-primary text-center"
-                data-toggle="modal"
-                data-target="#myResumeModal"
-                >
-                Check out my Resume
-                </button>
+            <!-- Button to Open the Modal -->
+            <button
+              id="modalColors"
+              style="color: #C5C6C7; background-color: #45A29E; margin-top:6%; border: none; margin-bottom: 6%;"
+              type="button"
+              onmouseover="hoverModal(modalColors);"
+              onmouseout="unhoverModal(modalColors);"
+              class="btn btn-primary text-center"
+              data-toggle="modal"
+              data-target="#myResumeModal"
+            >
+              Check out my Resume
+            </button>
+          </div>
+          <!-- End of Image/Button Column -->
 
-            </div> <!-- End of Image/Button Column -->
-
-            <div class="col-lg-9" style="background-color:#C5C6C7; padding-left:4%; padding-right:4%;">
+          <div
+            class="col-lg-9"
+            style="background-color:#C5C6C7; padding-left:4%; padding-right:4%;"
+          >
             <!-- About me paragraph -->
             <h2 style="text-align: center; padding-top:2%; color: #1F2833;">
               <b>About Me</b>
             </h2>
             <p style="text-align: center; padding-top:2%;">
-                Having moved to San Diego in August of 2018, I have since been employed 
-                as a Junior Software Engineer at HII - Technical Solutions Division. 
-                As the only onsite Software Engineer, I wear many hats. Among my responsibilities
-                , I act as a liaison between our customers, Software Engineers, and the IT team. 
-                Additionally, I provide <b>QA testing</b> along with detailed bug reports.
+              Having moved to San Diego in August of 2018, I have since been
+              employed as a Junior Software Engineer at HII - Technical
+              Solutions Division. As the only onsite Software Engineer, I wear
+              many hats. Among my responsibilities , I act as a liaison between
+              our customers, Software Engineers, and the IT team. Additionally,
+              I provide <b>QA testing</b> along with detailed bug reports.
             </p>
 
             <p style="text-align: center;">
-                When I am wearing my Software Engineering hat I write and maintain a custom-built 
-                installation package both the main application as well as several prerequisite 
-                applications necessary to run it. I've also written CSV Exporters that use RabbitMQ 
-                to collect information from our <b>PostgreSQL</b> database. This information is then turned 
-                into an easily read CSV file which is used to improve our machine learning algorithm. 
-                These applications have saved hundreds of man-hours as the information fed to the 
-                algorithm was manually gathered before and each prerequisite software was manually 
-                installed - taking out as much of the human factor in repetitive tasks means fewer errors!
+              When I am wearing my Software Engineering hat I write and maintain
+              a custom-built installation package both the main application as
+              well as several prerequisite applications necessary to run it.
+              I've also written CSV Exporters that use RabbitMQ to collect
+              information from our <b>PostgreSQL</b> database. This information
+              is then turned into an easily read CSV file which is used to
+              improve our machine learning algorithm. These applications have
+              saved hundreds of man-hours as the information fed to the
+              algorithm was manually gathered before and each prerequisite
+              software was manually installed - taking out as much of the human
+              factor in repetitive tasks means fewer errors!
             </p>
             <p style="text-align: center;">
-                On my own, I have continued to advance as a Software Engineer. Recently I wrote this website.
-                 I learned how to use <b>Bootstrap 4</b> to streamline the process of creating <b>responsive websites</b>. 
-                 Additionally, I am learning more about Object Oriented Design on my own with sites set on 
-                 learning <b>JavaScript Frameworks</b> such as <b>Springboot</b> and <b>Angular</b>.
+              On my own, I have continued to advance as a Software Engineer.
+              Recently I wrote this website. I learned how to use
+              <b>Bootstrap 4</b> to streamline the process of creating
+              <b>responsive websites</b>. Additionally, I am learning more about
+              Object Oriented Design on my own with sites set on learning
+              <b>JavaScript Frameworks</b> such as <b>Springboot</b> and
+              <b>Angular</b>.
             </p>
             <P style="text-align: center;">
               Feel free to use check out my resume below or use the contact form
@@ -236,11 +247,7 @@
               name="name"
             />
           </div>
-          <input
-            type="hidden"
-            name="_next"
-            value="https://www.ReedStock.me"
-          />
+          <input type="hidden" name="_next" value="https://www.ReedStock.me" />
           <div class="form-group">
             <label style="color: #66FCF1;" for="emailInput"></label>
             <input
