--- a/MessageFailed.html
+++ b/MessageFailed.html
@@ -33,10 +33,11 @@
         <!-- Message and go back button -->
         <div class="container" style="margin-top: 10%;">
           <h1 class="display-3" style="margin-top: 5%">
-            <b>Thanks for Reaching Out</b>
+            <b>Oops!</b>
           </h1>
           <p style="font-size: 1.5rem;">
-            I'll be in contact with you as soon as I can!
+            Looks like something went wrong, you can try again or just email me
+            directly at ReedStock1992@gmail.com!
           </p>
           <a
             class="btn btn-dark btn-lg"
