- Changed redirecting names

--- a/MessageFailed.html
+++ b/MessageFailed.html
@@ -41,7 +41,7 @@
           </p>
           <a
             class="btn btn-dark btn-lg"
-            href="https://www.ReedStock.me"
+            href="index.html"
             role="button"
             style="margin-top: 2%;
             "
