--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
               name="name"
             />
           </div>
-          <input type="hidden" name="_next" value="https://www.ReedStock.me" />
+          <input type="hidden" name="_next" value="MessageFailed.html" />
           <div class="form-group">
             <label style="color: #66FCF1;" for="emailInput"></label>
             <input
