--- a/MessageSent.html
+++ b/MessageSent.html
@@ -40,7 +40,7 @@
           </p>
           <a
             class="btn btn-dark btn-lg"
-            href="https://www.ReedStock.me"
+            href="index.html"
             role="button"
             style="margin-top: 2%;
             "
