- Fixed css class references for index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
       rel="stylesheet"
     />
     <script src="js/main.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="css/index.css"
+      href="css/main.css"
+    />
   </head>
 
   <body
